# aje_ts3_plugin

./: .gitignore  README.md  makefile
doc/ts3_sdk_3.1.1.0/cmake/: TSClientSdkConfig.cmake  TSServerSdkConfig.cmake  ide.cmake  linux_arm32_toolchain.cmake  linux_arm64_toolchain.cmake  linux_x86_toolchain.cmake
doc/ts3_sdk_3.1.1.0/doc/: LICENSING  changelog_sdk.txt  client_api.html  enumerations.html  errors.html  genindex.html  index.html  properties.html  search.html  searchindex.js  server_api.html
doc/ts3_sdk_3.1.1.0/doc/_static/: documentation_options.js
doc/ts3_sdk_3.1.1.0/doc/client/: 3dsound.html  audio-activate.html  audio-buffer-access.html  audio-close.html  audio-codecs.html  audio-custom-device.html  audio-get-current.html  audio-init.html  audio-list-device-mode.html  audio-localtest.html  audio.html  basic.html  channel-create.html  channel-delete.html  channel-join.html  channel-list.html  channel-move.html  channel-sort.html  channel-subscribe.html  channels.html  client-kick.html  client-list.html  connections.html  encoder.html  encryption.html  faq.html  filetransfer.html  info-channel.html  info-client.html  info-server.html  info.html  intro.html  local-mute.html  logging.html  passwords.html  playback-options.html  preprocessor.html  textmessages.html  voice-encryption.html  wave-files.html  (+1 more)
doc/ts3_sdk_3.1.1.0/doc/server/: advanced-create.html  basic.html  channel-create-adv.html  channel-create.html  channel-delete.html  channel-list.html  channel-move.html  channels.html  client-list.html  clients.html  disable-commands.html  encryption.html  faq.html  filetransfer.html  info-bandwidth.html  info-channel.html  info-client.html  info-server.html  info.html  intro.html  list-items.html  passwords.html  permissions-filetransfer.html  permissions.html  security-salt.html  vserver-manage.html  whisper.html
doc/ts3_sdk_3.1.1.0/examples/: CMakeLists.txt  generate_vs_2019.bat  linux_arm.sh  linux_x86.sh
doc/ts3_sdk_3.1.1.0/examples/client/: main.c
doc/ts3_sdk_3.1.1.0/examples/client_android_javasound/: build.gradle
doc/ts3_sdk_3.1.1.0/examples/client_android_javasound/app/src/main/: AndroidManifest.xml
doc/ts3_sdk_3.1.1.0/examples/client_android_javasound/app/src/main/java/com/teamspeak/ts3sdkclient/: ExampleFragment.java  MainActivity.java
doc/ts3_sdk_3.1.1.0/examples/client_android_javasound/app/src/main/java/com/teamspeak/ts3sdkclient/connection/: ConnectionHandler.kt
doc/ts3_sdk_3.1.1.0/examples/client_customdevice/: sources.cmake
doc/ts3_sdk_3.1.1.0/examples/client_ios/client_ios.xcodeproj/: project.pbxproj
doc/ts3_sdk_3.1.1.0/examples/client_ios_customdevice/client_customdevice.xcodeproj/: project.pbxproj
doc/ts3_sdk_3.1.1.0/examples/client_minimal/: sources.cmake
doc/ts3_sdk_3.1.1.0/examples/client_minimal_filetransfer/: main.c
doc/ts3_sdk_3.1.1.0/examples/server/: main.c
doc/ts3_sdk_3.1.1.0/examples/server_creation_params/: main.c  sources.cmake
doc/ts3_sdk_3.1.1.0/examples/server_filetransfer/: main.c
doc/ts3_sdk_3.1.1.0/examples/server_minimal/: main.c
doc/ts3_sdk_3.1.1.0/examples/server_permissions/: main.c
doc/ts3_sdk_3.1.1.0/frameworks/ios/soundbackends/coreaudio_ts_soundbackend.framework/: Info.plist  coreaudio_ts_soundbackend
doc/ts3_sdk_3.1.1.0/frameworks/ios/soundbackends/coreaudio_ts_soundbackend.framework/Headers/: coreaudio_ts_soundbackend-Swift.h
doc/ts3_sdk_3.1.1.0/frameworks/ios/soundbackends/coreaudio_ts_soundbackend.framework/Modules/coreaudio_ts_soundbackend.swiftmodule/: arm64-apple-ios.swiftdoc  arm64.swiftmodule  x86_64-apple-ios-simulator.swiftdoc  x86_64.swiftmodule
doc/ts3_sdk_3.1.1.0/frameworks/ios/soundbackends/coreaudio_ts_soundbackend.framework/Modules/coreaudio_ts_soundbackend.swiftmodule/Project/: arm64.swiftsourceinfo  x86_64-apple-ios-simulator.swiftsourceinfo
doc/ts3_sdk_3.1.1.0/frameworks/ios/ts3client.xcframework/: Info.plist
doc/ts3_sdk_3.1.1.0/frameworks/ios/ts3client.xcframework/ios-arm64/ts3client.framework/: Info.plist
doc/ts3_sdk_3.1.1.0/frameworks/ios/ts3client.xcframework/ios-arm64/ts3client.framework/Modules/: module.modulemap
doc/ts3_sdk_3.1.1.0/frameworks/ios/ts3client.xcframework/ios-x86_64-simulator/ts3client.framework/: Info.plist
doc/ts3_sdk_3.1.1.0/frameworks/ios/ts3client.xcframework/ios-x86_64-simulator/ts3client.framework/Headers/teamspeak/: public_errors.h
doc/ts3_sdk_3.1.1.0/frameworks/mac/ts3client.framework/: ts3client
doc/ts3_sdk_3.1.1.0/frameworks/mac/ts3client.framework/Headers/teamspeak/: clientlib_publicdefinitions.h  public_definitions.h
doc/ts3_sdk_3.1.1.0/frameworks/mac/ts3client.framework/Versions/A/Libraries/: libcoreaudio_mac.dylib
doc/ts3_sdk_3.1.1.0/frameworks/mac/ts3client.framework/Versions/A/Resources/: Info.plist
doc/ts3_sdk_3.1.1.0/include/teamspeak/: clientlib.h  serverlib.h
doc/ts3_sdk_3.1.1.0/lib/windows/win32/: ts3client.lib
doc/ts3_sdk_3.1.1.0/lib/windows/win64/: ts3client.lib  ts3server.lib
src/: aje.h  plugin.c
web.test/: README.md  index.html
